Finalização da tela de criação de Login e inicialização da tela de recuperação de senha.

--- a/paginas/create-login.html
+++ b/paginas/create-login.html
@@ -48,8 +48,9 @@
         <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
       </div>
       <div class="offcanvas-body">
-        <p>Caso você encontre algum problema na criação do login, entre em contato comigo clicando no link abaixo.</p>
-        <a href="https://www.linkedin.com/in/brendo-lopes-2a9144195/" target="_blank">>>LinkedIn</a>
+        <p>Caso você encontre algum problema na criação do login, entre em contato comigo clicando no ícone do LinkedIn ou do Instagram abaixo.</p>
+        <a href="https://www.linkedin.com/in/brendo-lopes-2a9144195/" target="_blank"><img class="img-fluid" src="/img/linkedin.png" alt="Imagem do LinkedIn"></a>
+        <a href="https://www.instagram.com/brendolopez/" target="_blank"><img class="img-fluid" src="/img/instagram.png" alt="Imagem do instagram"></a>
       </div>
     </div>
   </form>
