--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="row">
                 <div class="col-md-6">
                     <div class="container-imagem">
-                        <h2>Agenda de <span>Compromissos</span></h2>
+                        <h2 class="">Agenda de Compromissos</h2>
                         <img src="img/calendario_sem_fundo.png" class="img-fluid" alt="imagem do calendário da tela de login">
                     </div>
                 </div>
@@ -33,7 +33,7 @@
                             </div>
                             <div class="mb-5 form-check">
                                 <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                                <label class="form-check-label" for="exampleCheck1">Lembra minha Senha</label>
+                                <label class="form-check-label" for="exampleCheck1">Lembrar minha Senha</label>
                               </div>
                             <div class="d-flex justify-content-between align-items-center">
                                 <div>
