--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
                               </div>
                             <div class="d-flex justify-content-between align-items-center">
                                 <div>
-                                    <a href="#" class="btn btn-primary">Entrar</a>
-                                    <a href="create-login.html" class="btn btn-dark ms-2">Cadastrar</a>
+                                    <a href="/paginas/grid.html" class="btn btn-primary">Entrar</a>
+                                    <a href="/paginas/create-login.html" class="btn btn-dark ms-2">Cadastrar</a>
                                 </div>
                                 <p class="esqueceuSenha"><a href="#">Esqueceu a senha?</a></p>
                             </div>
