--- a/paginas/form.html
+++ b/paginas/form.html
@@ -10,12 +10,29 @@
     <link rel="stylesheet" href="/css/style-create-login.css">
 </head>
 <body>
+    <nav class="navbar bg-body-tertiary">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">
+            <img src="/img/calendario_sem_fundo.png" alt="logo do calendário" width="80" height="84" class="d-inline-block align-text-center">Agendamentos</a>
+        </div>
+    </nav>
+
     <div class="container mt-5">
-        <h2>Agendamento de Compromisso</h2>
+        <svg class="icone-form d-inline align-middle mb-5" xmlns="http://www.w3.org/2000/svg" height="40" width="40" viewBox="5 0 448 512">
+            <path fill="#d9dfe7" d="M128 0c17.7 0 32 14.3 32 32V64H288V32c0-17.7 14.3-32 32-32s32 14.3 32 32V64h48c26.5 0 
+            48 21.5 48 48v48H0V112C0 85.5 21.5 64 48 64H96V32c0-17.7 14.3-32 32-32zM0 192H448V464c0 26.5-21.5 48-48 
+            48H48c-26.5 0-48-21.5-48-48V192zm64 80v32c0 8.8 7.2 16 16 16h32c8.8 0 16-7.2 16-16V272c0-8.8-7.2-16-16-16H80c-8.8 0-16 
+            7.2-16 16zm128 0v32c0 8.8 7.2 16 16 16h32c8.8 0 16-7.2 16-16V272c0-8.8-7.2-16-16-16H208c-8.8 0-16 7.2-16 16zm144-16c-8.8 
+            0-16 7.2-16 16v32c0 8.8 7.2 16 16 16h32c8.8 0 16-7.2 16-16V272c0-8.8-7.2-16-16-16H336zM64 400v32c0 8.8 7.2 16 16 16h32c8.8 
+            0 16-7.2 16-16V400c0-8.8-7.2-16-16-16H80c-8.8 0-16 7.2-16 16zm144-16c-8.8 0-16 7.2-16 16v32c0 8.8 7.2 16 16 16h32c8.8 0 16-7.2 
+            16-16V400c0-8.8-7.2-16-16-16H208zm112 16v32c0 8.8 7.2 16 16 16h32c8.8 0 16-7.2 16-16V400c0-8.8-7.2-16-16-16H336c-8.8 0-16 7.2-16 16z"/></svg>
+        <h2 class="mb-4 d-inline align-top">Agendar Compromisso</h2>
         <form>
             <div class="mb-3">
-                <label for="data" class="form-label">Data e Hora</label>
-                <input type="datetime-local" class="form-control" id="data" name="data">
+                <label for="data" class="form-label">Data</label>
+                <input type="date" class="form-control mb-3" id="data" name="data">
+                <label for="data" class="form-label">Hora</label>
+                <input type="time" class="form-control" id="data" name="data">
             </div>
             <div class="mb-3 form-check">
                 <input type="checkbox" class="form-check-input" id="notificacao" name="notificacao">
@@ -26,12 +43,9 @@
                 <textarea class="form-control" id="descricao" name="descricao" rows="3"></textarea>
             </div>
             <button type="submit" class="btn btn-primary">Agendar</button>
+            <button type="submit" class="btn btn-danger">Cancelar</button>
         </form>
     </div>
-    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-
-
-
 </body>
 </html>
