--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Agendamentos de Compromissos</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="/style-login.css">
+    <link rel="stylesheet" href="css/style-login.css">
 </head>
 <body>
 
@@ -37,8 +37,8 @@
                               </div>
                             <div class="d-flex justify-content-between align-items-center">
                                 <div>
-                                    <a href="/form.html" class="btn btn-primary">Entrar</a>
-                                    <a href="/create-login.html" class="btn btn-dark ms-2">Cadastrar</a>
+                                    <a href="/html/form.html" class="btn btn-primary">Entrar</a>
+                                    <a href="/html/create-login.html" class="btn btn-dark ms-2">Cadastrar</a>
                                 </div>
                                 <p class="esqueceuSenha"><a href="#">Esqueceu a senha?</a></p>
                             </div>
